--- a/src/County Plot Manager/County Plot Manager/App.xaml
+++ b/src/County Plot Manager/County Plot Manager/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="County_Plot_Manager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:County_Plot_Manager"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:County_Plot_Manager">
     <Application.Resources>
          
     </Application.Resources>
