--- a/src/County Plot Manager/County Plot Manager/App.xaml
+++ b/src/County Plot Manager/County Plot Manager/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="County_Plot_Manager.App"
+﻿<Application x:Class="PlotManager.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:County_Plot_Manager">
+             xmlns:local="clr-namespace:PlotManager.UI">
     <Application.Resources>
          
     </Application.Resources>
