--- a/src/County Plot Manager/County Plot Manager/Windows/wndMain.xaml
+++ b/src/County Plot Manager/County Plot Manager/Windows/wndMain.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="County_Plot_Manager.Windows.wndMain"
+﻿<Window x:Class="PlotManager.UI.Windows.wndMain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:County_Plot_Manager.Windows"
+        xmlns:local="clr-namespace:PlotManager.UI.Windows"
         mc:Ignorable="d"
-        Title="wndMain" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Plot Manager" Height="450" Width="800">
+	<Grid>
+
+	</Grid>
 </Window>
