--- a/src/County Plot Manager/County Plot Manager/App.xaml
+++ b/src/County Plot Manager/County Plot Manager/App.xaml
@@ -2,7 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PlotManager.UI">
-    <Application.Resources>
-         
-    </Application.Resources>
+
+	<Application.Resources>
+
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="Styles/ColorsAndBrushes.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+
+	</Application.Resources>
+
 </Application>
