--- a/src/County Plot Manager/County Plot Manager/App.xaml
+++ b/src/County Plot Manager/County Plot Manager/App.xaml
@@ -8,6 +8,12 @@
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="Styles/ColorsAndBrushes.xaml"/>
+				<ResourceDictionary Source="Styles/TextBlock.xaml"/>
+				<ResourceDictionary Source="Styles/ContentPresenter.xaml"/>
+				<ResourceDictionary Source="Styles/Button.xaml"/>
+				<ResourceDictionary Source="Styles/ScrollViewer.xaml"/>
+				<ResourceDictionary Source="Styles/ComboBox.xaml"/>
+				<ResourceDictionary Source="Styles/Window.xaml"/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 
