--- a/src/County Plot Manager/County Plot Manager/App.xaml
+++ b/src/County Plot Manager/County Plot Manager/App.xaml
@@ -10,6 +10,7 @@
 				<ResourceDictionary Source="Styles/ColorsAndBrushes.xaml"/>
 				<ResourceDictionary Source="Styles/TextBlock.xaml"/>
 				<ResourceDictionary Source="Styles/ContentPresenter.xaml"/>
+				<ResourceDictionary Source="Styles/TextBox.xaml"/>
 				<ResourceDictionary Source="Styles/Button.xaml"/>
 				<ResourceDictionary Source="Styles/ScrollViewer.xaml"/>
 				<ResourceDictionary Source="Styles/ComboBox.xaml"/>
