--- a/src/County Plot Manager/County Plot Manager/UserControls/PlotMap.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/PlotMap.xaml
@@ -5,8 +5,41 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlotManager.UI.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="600">
+
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
+
+		<ItemsControl Grid.Row="0"
+                  ItemsSource="{Binding Path=PlotList}"/>
+
+		<Grid Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<StackPanel Grid.Column="0" Margin="10"
+                Orientation="Horizontal" VerticalAlignment="Bottom">
+				<TextBlock Style="{StaticResource TextEmphasis}" 
+                 Text="Select Plot ID:"/>
+				<ComboBox Style="{StaticResource ComboBoxSimple}"
+                Margin="5" Width="140"
+                ItemsSource="{Binding Path=PlotList}"
+                SelectedItem="{Binding Path=CurrentPlot}"/>
+				<TextBlock Style="{StaticResource TextEmphasis}"
+                 Margin="20,0,5,0" Text="Enter Plot ID:"/>
+				<TextBox Style="{StaticResource TextBoxSimple}" Width="120" 
+               VerticalContentAlignment="Center" Height="25"
+               Text="{Binding Path=CurrentPlot,
+                     FallbackValue='Enter Plot ID'}"/>
+			</StackPanel>
+			<Button Grid.Column="1" 
+              Style="{StaticResource ButtonCommand}"
+              Content="Details"/>
+		</Grid>
+	</Grid>
+
 </UserControl>
