--- a/src/County Plot Manager/County Plot Manager/UserControls/Plot.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/Plot.xaml
@@ -1,12 +1,47 @@
-﻿<UserControl x:Class="PlotManager.UI.UserControls.Plot"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlotManager.UI.UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             xmlns:Converters="clr-namespace:PlotManager.UI.Classes.Converters" x:Class="PlotManager.UI.UserControls.Plot"
+             mc:Ignorable="d" Height="50"  Width="100">
+
+
+	<UserControl.Resources>
+		<Converters:IntToFontSizeConverter x:Key="IntToFontSizeConverter"/>
+	</UserControl.Resources>
+
+
+	<Border Background="{StaticResource brush_Base_25}"
+					BorderBrush="{StaticResource brush_Base_100}"
+					BorderThickness="1">
+		<Grid >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="*"/>
+			</Grid.ColumnDefinitions>
+			<Border Grid.Column="0" Background="{StaticResource brush_Base_75}">
+				<TextBlock Style="{StaticResource TextOptionWhite}" Margin="2"
+									 Text="{Binding ShortId, FallbackValue=D1}"/>
+			</Border>
+
+			<ItemsControl Grid.Column="1" Margin="3,0" 
+										ItemsSource="{Binding Tenants, FallbackValue=ab}">
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<StackPanel>
+							<local:Tenant FontSize="{Binding Tenants.Count, 
+											Converter={StaticResource IntToFontSizeConverter}}"/>
+							<Border HorizontalAlignment="Stretch" Height="1"
+												Background="{StaticResource brush_Base_50}"/>
+						</StackPanel>
+
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</Grid>
+	</Border>
+
+
 </UserControl>
