--- a/src/County Plot Manager/County Plot Manager/UserControls/Section.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/Section.xaml
@@ -5,7 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlotManager.UI.UserControls"
              mc:Ignorable="d" >
-    <Grid>
-            
-    </Grid>
+
+	<ItemsControl ItemsSource="{Binding Path=PlotGroupColumns, 
+															FallbackValue='1234'}">
+		<ItemsControl.ItemsPanel>
+			<ItemsPanelTemplate>
+				<StackPanel Orientation="Horizontal"/>
+			</ItemsPanelTemplate>
+		</ItemsControl.ItemsPanel>
+
+		<ItemsControl.ItemTemplate>
+			<DataTemplate>
+				<local:PlotGroup/>
+			</DataTemplate>
+		</ItemsControl.ItemTemplate>
+	</ItemsControl>
+
 </UserControl>
