--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/PlotOwners.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/PlotOwners.xaml
@@ -3,11 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PlotManager.UI.UserControls.DataEntry"
+             xmlns:ucde="clr-namespace:PlotManager.UI.UserControls.DataEntry"
              mc:Ignorable="d" Background="White"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-		<TextBlock Text="Plot Owner Information"/>
 
+	<Grid>
+		<StackPanel>
+			<TextBlock Text="Plot Owner Information"
+                 Style="{StaticResource TextTitle}"/>
+			<ucde:Name/>
+		</StackPanel>
 	</Grid>
+
 </UserControl>
