--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Name.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Name.xaml
@@ -23,7 +23,8 @@
 
 
 	<Grid>
-		<StackPanel Orientation="Horizontal" Margin="5">
+		<TextBlock Text="Name" FontSize="20" Margin="2,-3,0,0" Foreground="{StaticResource brush_Base_75}"/>
+		<StackPanel Orientation="Horizontal" Margin="5,18,5,2">
 			<StackPanel Margin="10,0">
 				<TextBlock Text="First:"/>
 				<TextBox Text="{Binding Path=FirstName}" TabIndex="0"/>
