--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterEmail.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterEmail.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.Email"
+﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.EnterEmail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -21,12 +21,14 @@
 		</Style>
 	</UserControl.Resources>
 
-		
+	<Grid>
+		<TextBlock Text="Email" FontSize="20" Margin="2,-3,0,0" 
+				Foreground="{StaticResource brush_Base_75}"/>
+		<StackPanel Margin="5,15,5,2">
+
 			<StackPanel Orientation="Horizontal">
-		<RadioButton VerticalAlignment="Center" Margin="5"/>
-		<TextBlock Text="email" VerticalAlignment="Center"/>
-		<TextBox Margin="0,5,5,5" Text="{Binding Path=email}"/>
-	</StackPanel>
 
-
+			</StackPanel>
+		</StackPanel>
+	</Grid>
 </UserControl>
