--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/ContactInfo.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/ContactInfo.xaml
@@ -4,58 +4,29 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlotManager.UI.UserControls.DataEntry"
-             mc:Ignorable="d" Background="{StaticResource brush_Base_25}">
+             mc:Ignorable="d" Background="White">
 
 	<UserControl.Resources>
-		<Style TargetType="{x:Type TextBlock}"
-					 BasedOn="{StaticResource TextCaption}">
-			<Setter Property="Margin"
-							Value="2"/>
-		</Style>
-		<Style TargetType="{x:Type TextBox}"
-					 BasedOn="{StaticResource  TextBoxSimple}">
-			<Setter Property="MinWidth"
-							Value="60"/>
-			<Setter Property="MinHeight"
-							Value="25"/>
-		</Style>
 	</UserControl.Resources>
 
 	<Grid>
-		<TextBlock Text="Address" FontSize="20" Margin="2,-3,0,0" 
-				Foreground="{StaticResource brush_Base_75}"/>
-		<StackPanel Orientation="Horizontal" Margin="5,15,5,2">
-		<StackPanel Margin="5">
-			<TextBlock Text="Address Line 1"/>
-			<TextBox Text="{Binding Path=AddressLine1}"/>
-			<TextBlock Text="Address Line 2"/>
-			<TextBox Text="{Binding Path=AddressLine2}"/>
-			<TextBlock Text="City"/>
-			<TextBox Text="{Binding Path=City}"/>
-			<TextBlock Text="State"/>
-			<TextBox Text="{Binding Path=State}"/>
-			<TextBlock Text="Zip Code"/>
-			<TextBox Text="{Binding Path=ZipCode}"/>
-			<TextBlock Text="Country"/>
-			<TextBox Text="{Binding Path=Country}"/>
-			<!--public string AddressLine1 { get; set; }
-		public string AddressLine2 { get; set; }
-		public string City { get; set; }
-		public string State { get; set; }
-		public string ZipCode { get; set; }
-		public string Country { get; set; }-->
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
 
-			<!--public Address Address { get; set; }
-		public Dictionary
-			<string, int>PhoneNumbers { get; set; }
-		public Dictionary
-				<string, string>emails { get; set; }-->
-			</StackPanel>
-			<StackPanel Margin="5">
-				<TextBlock Text="Address Line 1"/>
-				<TextBox Text="{Binding Path=AddressLine1}"/>
+		<local:EnterAddress Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+												Margin="10,10,5,10"/>
 
-			</StackPanel>
-		</StackPanel>
+		<local:EnterPhone Grid.Column="1" Grid.Row="0"
+											Margin="5,10,10,5"/>
+
+		<local:EnterEmail Grid.Column="1" Grid.Row="1"
+											Margin="5,5,10,10"/>
+
 	</Grid>
 </UserControl>
