--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterAddress.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterAddress.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.EnterEmail"
+﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.EnterAddress"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlotManager.UI.UserControls.DataEntry"
-             mc:Ignorable="d" Background="{StaticResource brush_Base_25}">
+            mc:Ignorable="d" Background="{StaticResource brush_Base_25}">
 
 	<UserControl.Resources>
 		<Style TargetType="{x:Type TextBlock}"
@@ -22,19 +22,21 @@
 	</UserControl.Resources>
 
 	<Grid>
-		<TextBlock Text="Email" FontSize="20" Margin="2,-3,0,0" 
+		<TextBlock Text="Address" FontSize="20" Margin="2,-3,0,0" 
 				Foreground="{StaticResource brush_Base_75}"/>
-		<StackPanel Margin="5">
-
-			<Button Content="Add..." HorizontalAlignment="Right"
-							Style="{StaticResource ButtonCommand}" Margin="-5"/>
-			<ItemsControl ItemsSource="{Binding Path=Emails, FallbackValue=12}">
-				<ItemsControl.ItemTemplate>
-					<DataTemplate>
-						<local:Email/>
-					</DataTemplate>
-				</ItemsControl.ItemTemplate>
-			</ItemsControl>
-		</StackPanel>
+			<StackPanel Margin="5,20,5,5">
+				<TextBlock Text="Address Line 1"/>
+				<TextBox Text="{Binding Path=AddressLine1}"/>
+				<TextBlock Text="Address Line 2"/>
+				<TextBox Text="{Binding Path=AddressLine2}"/>
+				<TextBlock Text="City"/>
+				<TextBox Text="{Binding Path=City}"/>
+				<TextBlock Text="State"/>
+				<TextBox Text="{Binding Path=State}"/>
+				<TextBlock Text="Zip Code"/>
+				<TextBox Text="{Binding Path=ZipCode}"/>
+				<TextBlock Text="Country"/>
+				<TextBox Text="{Binding Path=Country}"/>
+			</StackPanel>
 	</Grid>
 </UserControl>
