--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterPhone.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterPhone.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.EnterEmail"
+﻿<UserControl x:Class="PlotManager.UI.UserControls.DataEntry.EnterPhone"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,16 +22,16 @@
 	</UserControl.Resources>
 
 	<Grid>
-		<TextBlock Text="Email" FontSize="20" Margin="2,-3,0,0" 
+		<TextBlock Text="Phone" FontSize="20" Margin="2,-3,0,0" 
 				Foreground="{StaticResource brush_Base_75}"/>
 		<StackPanel Margin="5">
 
 			<Button Content="Add..." HorizontalAlignment="Right"
 							Style="{StaticResource ButtonCommand}" Margin="-5"/>
-			<ItemsControl ItemsSource="{Binding Path=Emails, FallbackValue=12}">
+			<ItemsControl ItemsSource="{Binding Path=Emails, FallbackValue=1}">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
-						<local:Email/>
+						<local:Phone/>
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
 			</ItemsControl>
