--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/ContactInfo.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/ContactInfo.xaml
@@ -17,15 +17,19 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<local:EnterAddress Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
-												Margin="10,10,5,10"/>
+		<local:Name Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"
+								Margin="10,10,10,5"/>
 
-		<local:EnterPhone Grid.Column="1" Grid.Row="0"
-											Margin="5,10,10,5"/>
+		<local:EnterAddress Grid.Column="0" Grid.Row="1" Grid.RowSpan="2"
+												Margin="10,5,5,10"/>
 
-		<local:EnterEmail Grid.Column="1" Grid.Row="1"
+		<local:EnterPhone Grid.Column="1" Grid.Row="1"
+											Margin="5,5,10,5"/>
+
+		<local:EnterEmail Grid.Column="1" Grid.Row="2"
 											Margin="5,5,10,10"/>
 
 	</Grid>
