--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Name.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Name.xaml
@@ -24,10 +24,11 @@
 
 	<Grid>
 		<TextBlock Text="Name" FontSize="20" Margin="2,-3,0,0" Foreground="{StaticResource brush_Base_75}"/>
-		<StackPanel Orientation="Horizontal" Margin="5,18,5,2">
+		<StackPanel Orientation="Horizontal" Margin="5,18,5,10">
 			<StackPanel Margin="10,0">
 				<TextBlock Text="First:"/>
-				<TextBox Text="{Binding Path=FirstName}" TabIndex="0"/>
+				<TextBox Text="{Binding Path=FirstName}" TabIndex="0"
+									MinWidth="150"/>
 			</StackPanel>
 			<StackPanel Margin="10,0">
 				<TextBlock Text="Middle:"/>
@@ -35,7 +36,8 @@
 			</StackPanel>
 			<StackPanel Margin="10,0">
 				<TextBlock Text="Last:"/>
-				<TextBox Text="{Binding Path=LastName}" TabIndex="2"/>
+				<TextBox Text="{Binding Path=LastName}" TabIndex="2"
+								 MinWidth="150"/>
 			</StackPanel>
 		</StackPanel>
 	</Grid>
