--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Email.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Email.xaml
@@ -32,6 +32,7 @@
 		<RadioButton VerticalAlignment="Center" Margin="5" TabIndex="13"
 		IsChecked="{Binding IsPrimary, Converter={StaticResource IntToBoolConverter}}" 
 		GroupName="email"/>
+		<Button Style="{StaticResource ButtonDelete}" Margin="0,0,5,0"/>
 	</StackPanel>
 
 
