--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterPhone.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/EnterPhone.xaml
@@ -28,7 +28,7 @@
 
 			<Button Content="Add..." HorizontalAlignment="Right"
 							Style="{StaticResource ButtonCommand}" Margin="-5" IsTabStop="False"/>
-			<ItemsControl ItemsSource="{Binding Path=Emails, FallbackValue=1}" IsTabStop="False">
+			<ItemsControl ItemsSource="{Binding Path=PhoneNumbers, FallbackValue=1}" IsTabStop="False">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
 						<local:Phone/>
