--- a/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Phone.xaml
+++ b/src/County Plot Manager/County Plot Manager/UserControls/DataEntry/Phone.xaml
@@ -35,7 +35,9 @@
 		IsChecked="{Binding Path=Phone.IsPrimary, 
 								Converter={StaticResource IntToBoolConverter}}"
 								GroupName="phone"/>
-		<Button Style="{StaticResource ButtonDelete}" Margin="0,0,5,0"/>
+		<Button Style="{StaticResource ButtonDelete}" Margin="0,0,5,0"
+						Command="{Binding Path=CommandDeletePhone}"
+						CommandParameter="{Binding Path=Phone}"/>
 	</StackPanel>
 
 
